# mcp-python-repl

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  test_mcp.py
data/: test.txt
examples/: api_alive.py  client.py  ingestion.py  marimo_ollama.py
examples/__marimo__/session/: marimo_ollama.py.json
scripts/: client.py
src/mcp_repl/: api.py  server.py
