[project]
name = "mcp-python-repl"
version = "0.1.0"
description = "An MCP server running on streamable-http with a Python REPL tool."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]