[project]
name = "mcp-python-repl"
version = "0.1.0"
description = "An MCP server running on streamable-http with a Python REPL tool."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "mcp[cli]>=1.27.0",
    "requests>=2.33.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "marimo>=0.23.1",
    "ollama>=0.6.1",
]
